Bug 1315815 - Don't treat async or await as a keyword when they contain escapes.  r=anba

--HG--
extra : rebase_source : 2122a2add6fe01a4fa52e4bc76e516d765dcc565